--- a/src/Services/Core/GICBankingSystem.Core.API/appsettings.json
+++ b/src/Services/Core/GICBankingSystem.Core.API/appsettings.json
@@ -2,6 +2,7 @@
     "ConnectionStrings": {
         "Database": "Server=localhost;Database=GICBankingSystem;User Id=sa;Password=Sa12345678;Encrypt=False;TrustServerCertificate=True"
     },
+    //Please modify Server , User Id and Password
    
     "Logging": {
         "LogLevel": {
