--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /src/Test/GICBankingSystem.Core.Application.Tests/bin/Debug/net8.0
 /obj
 /src/Test/GICBankingSystem.Core.API.Tests/bin/Release/net8.0
+/bin/Debug
